fixed recycle bin alignment

--- a/static/styles/windows.css
+++ b/static/styles/windows.css
@@ -171,6 +171,6 @@
     height: fit-content;
 }
 
-#recycleBinBody{
+#recycleRow{
     display: flex;
 }
